--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
                         <button id="btnBuscarMovimiento" class="btn-operation" disabled>
                             <i class="fas fa-search"></i> Buscar por Nombre (find)
                         </button>
+                        <!-- Nuevos botones para HU4 y HU5 -->
+            <button id="btnSumarizarPorTipo" class="btn-operation" disabled>
+                <i class="fas fa-chart-pie"></i> Sumarizar por Tipo
+            </button>
+            <button id="btnBuscarPorRango" class="btn-operation" disabled>
+                <i class="fas fa-dollar-sign"></i> Buscar por Rango
+            </button>
                     </div>
                 </div>
             </section>
